<resources>
    <string name="app_name">APSalud</string>
    <string name="label_login">Inicio de Sesión</string>
    <string name="label_register">Registro de Usuarios</string>
    <string name="label_email">E-mail</string>
    <string name="label_name">Nombre</string>
    <string name="label_contraseña">Contraseña</string>
    <string name="label_button_in">Ingresar</string>
    <string name="label_button_re">Registrar</string>
    <string name="label_go_to_registrar">¿Aún no te has registrado?</string>
    <string name="label_go_to_login">¿Estas registrado? vamos al Inicio</string>
    <string name="hint_email">Ingrese su email</string>
    <string name="hint_name">Ingrese su nombre</string>
    <string name="hint_contraseña">Ingrese su contraseña</string>
    <string name="fill_your_data">Por favor llena tus datos</string>
    <string name="saludo">Bienvenido a</string>
    <string name="Make_Appoinment">Reservar una cita</string>
    <string name="scheduled">Mis citas medicas</string>
    <string name="Exams">Mis examenes</string>
    <string name="logout">Cerrar sesión</string>
    <string name="label_createAppointment">Reserva una cita</string>
    <string name="label_description">Descripción</string>
    <string name="hint_description">Descripción</string>
    <string name="label_specialty">Especialidad</string>
    <string name="hint_specialty">Especialidad</string>
    <string name="label_type">Tipo de cita</string>
    <string name="label_type1">Consulta</string>
    <string name="label_type2">Examen</string>
    <string name="label_button_next">Siguiente</string>
    <string name="label_doctor">Doctor</string>
    <string name="label_scheduled_date">Fecha para la cita</string>
    <string name="hint_scheduled">Seleccione una fecha</string>
    <string name="label_confirmAppointment">Confirmar</string>
    <string name="toast_message">Citas registrada correctamente</string>

    <string name="date_format">%1$d-%2$s-%3$s</string>
    <string name="My_appointments">Mis Citas</string>
    <string name="item_appointment_id">Cita Médica # %1$d</string>
    <string name="item_appointment_doctor">appointment.doctorName</string>
    <string name="item_appointment_date">Aténción el día %1$s</string>
    <string name="item_appointment_time">A las %1$s</string>
    <string name="press_back_again">Presione nuevamente para salir</string>

    <string name="dialog_title">¿Estas seguro que deseas salir?</string>
    <string name="dialog_message">Si abandonas el registro los datos ingresados se perderan.</string>
    <string name="dialog_button_yes">Si,salir</string>
    <string name="dialog_button_continue">Continuar</string>
    <string name="validate_descrption_appointment">La descripcion es demasiado corta</string>
    <string name="label_scheduled_time">Hora para la cita</string>
    <string name="data_confirm">Confirmar datos de la cita</string>
    <string name="validate_date">"Es necesario seleccionar una fecha "</string>
    <string name="validate_time">Es necesario seleccionar una hora para la cita</string>
    <string name="Alert_specialty">Ha ocurrido un problema al cargar las especialidades</string>
    <string name="Alert_doctor">Ha ocurrido un problema al cargar los medicos</string>
    <string name="Fail_hours">No se han podido cargar las horas</string>
    <string name="Alert_info">Seleccione un médico y una fecha para ver las horas disponibles</string>
    <string name="Alert_danger">No se encontraron horas disponibles para el medico en el día seleccionado.</string>
    <string name="Alert_login_response">Se obtuvo una respuesta inesperada del servidor</string>
    <string name="error_credentials">Las credenciales son incorrectas</string>
    <string name="Alert_empty_text_login">Ingrese un correo y contraseña</string>
    <string name="welcome_name">Bienvenido %1$s</string>

    <string name="item_appointment_createdAt">Esta cita se registro el día %1$s con la siguiente descripción:</string>
    <string name="Alert_error_stroreAppointment">Ocurrio un error inesperado al registra la cita medica</string>
    <string name="My_exams">Mis Examenes</string>

    <string name="item_exam_id">Examen # %1$d</string>
    <string name="item_exam_created">Este examen fue registrado el dia %1$s </string>
    <string name="Alert_register">Porfavor llenar todos los campos</string>
    <string name="Alert_error_register">Ocurrio un error en el registro</string>
    <string name="item_exam_doctor">"Por el doctor %1$s "</string>


</resources>