<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.CreateAppointmentActivity"
    android:id="@+id/step1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:layout_marginLeft="8dp"
    android:layout_marginTop="90dp"
    android:layout_marginRight="8dp"
    android:backgroundTint="@color/white"
    app:cardCornerRadius="20dp"
    app:cardElevation="50dp"
    tools:targetApi="lollipop">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:text="@string/label_description"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/EtxtDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:autofillHints="no"
            android:hint="@string/hint_description"
            android:inputType="text" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:text="@string/label_specialty"
            android:textColor="@color/black" />

        <Spinner
            android:id="@+id/specialtySpiner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">

        </Spinner>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:text="@string/label_type"
            android:textColor="@color/black" />

        <RadioGroup
            android:id="@+id/radioType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checkedButton="@id/rbtnType1"
            >

            <RadioButton
                android:id="@+id/rbtnType1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/label_type1" />

            <RadioButton
                android:id="@+id/rbtnType2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/label_type2" />
        </RadioGroup>


        <Button
            android:id="@+id/btnNext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@color/morado"
            android:drawableRight="@drawable/ic_baseline_navigate_next_24"
            android:text="@string/label_button_next"
            android:textColor="@color/white"

            />


    </LinearLayout>


</androidx.cardview.widget.CardView>