<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/registerLayout"
    android:background="@drawable/bg_gradient"
    tools:context=".ui.RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:gravity="center_horizontal"
            android:text="@string/label_register"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold" />
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="82dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/logo_ap" />

        <androidx.cardview.widget.CardView
            android:layout_width="350dp"
            android:layout_height="390dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            app:cardElevation="50dp"
            app:cardCornerRadius="20dp"
            android:backgroundTint="@color/white"
            tools:targetApi="lollipop">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="10dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="8dp"
                    android:text="@string/label_name"
                    android:textColor="@color/black" />

                <EditText
                    android:id="@+id/EtRegisterUser"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="8dp"
                    android:autofillHints="no"
                    android:hint="@string/hint_name"
                    android:inputType="text" />
                <TextView

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="8dp"
                    android:text="@string/label_email"
                    android:textColor="@color/black" />

                <EditText
                    android:id="@+id/EtRegisterEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="8dp"
                    android:autofillHints="no"
                    android:hint="@string/hint_email"
                    android:inputType="textEmailAddress" />


                <TextView

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="8dp"
                    android:text="@string/label_contraseña"
                    android:textColor="@color/black" />

                <EditText
                    android:id="@+id/EtRegisterPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="8dp"
                    android:autofillHints="no"
                    android:hint="@string/hint_contraseña"
                    android:inputType="textPassword" />

                <Button
                    android:id="@+id/btnRegister"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@color/morado"
                    android:text="@string/label_button_re"
                    android:textColor="@color/white"


                    />

                <TextView
                    android:id="@+id/gotoLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:gravity="center"
                    android:text="@string/label_go_to_login"
                    android:textColor="@color/pink_2"
                    />
            </LinearLayout>


        </androidx.cardview.widget.CardView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>