<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".CreateAppointmentActivity"
    android:id="@+id/step2"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:layout_marginLeft="8dp"
    android:layout_marginTop="90dp"
    android:layout_marginRight="8dp"
    android:backgroundTint="@color/white"
    android:visibility="gone"
    app:cardCornerRadius="20dp"
    app:cardElevation="50dp"
    tools:targetApi="lollipop">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:text="@string/label_doctor"
                android:textColor="@color/black" />

            <Spinner
                android:id="@+id/doctorSpiner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp">

            </Spinner>

            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:text="@string/label_scheduled_date"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/EtxtScheduledDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:autofillHints="no"
                android:clickable="true"
                android:focusable="false"
                android:hint="@string/hint_scheduled"
                android:inputType="date"
                android:maxLines="1"
                android:onClick="onClickScheduleDate" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/radioGroupLeft"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <RadioButton
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="8:00 AM" />

                    <RadioButton
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="9:00 AM" />


                </LinearLayout>

                <LinearLayout
                    android:id="@+id/radioGroupRight"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <RadioButton
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="8:00 AM" />

                    <RadioButton
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="9:00 AM" />


                </LinearLayout>
            </LinearLayout>


            <Button
                android:id="@+id/btnNext2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:background="@color/morado"
                android:drawableRight="@drawable/ic_baseline_navigate_next_24"
                android:text="@string/label_button_next"
                android:textColor="@color/white"

                />


        </LinearLayout>
    </androidx.core.widget.NestedScrollView>


</androidx.cardview.widget.CardView>